fix(layout): prevent jump on first field edit

--- a/src/assets/scss/_utils.scss
+++ b/src/assets/scss/_utils.scss
@@ -5,6 +5,7 @@ pre {
 code.hljs {
   background-color: #efefef;
   padding: 10px;
+  min-height: 38px;
 }
 
 .form-check {
